headers/c.h

#    define librocksdb "librocksdb.dll"
#    define librocksdb "librocksdb.dylib"
#    define librocksdb "librocksdb.so"
extern ROCKSDB_LIBRARY_API void rocksdb_options_set_max_mem_compaction_level(
    rocksdb_options_t*, int);