src/rocksdb_c.nim


proc rocksdb_set_options*(db: ptr rocksdb_t; count: cint; keys: ptr cstring;
                         values: ptr cstring; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_set_options", dynlib: librocksdb.}
proc rocksdb_options_create*(): ptr rocksdb_options_t {.cdecl,
    importc: "rocksdb_options_create", dynlib: librocksdb.}
proc rocksdb_options_destroy*(a2: ptr rocksdb_options_t) {.cdecl,
    importc: "rocksdb_options_destroy", dynlib: librocksdb.}
proc rocksdb_options_increase_parallelism*(opt: ptr rocksdb_options_t;
    total_threads: cint) {.cdecl, importc: "rocksdb_options_increase_parallelism",
                         dynlib: librocksdb.}
proc rocksdb_options_optimize_for_point_lookup*(opt: ptr rocksdb_options_t;
    block_cache_size_mb: uint64) {.cdecl, importc: "rocksdb_options_optimize_for_point_lookup",
                                 dynlib: librocksdb.}
proc rocksdb_options_optimize_level_style_compaction*(opt: ptr rocksdb_options_t;
    memtable_memory_budget: uint64) {.cdecl, importc: "rocksdb_options_optimize_level_style_compaction",
                                    dynlib: librocksdb.}
proc rocksdb_options_optimize_universal_style_compaction*(
    opt: ptr rocksdb_options_t; memtable_memory_budget: uint64) {.cdecl,
    importc: "rocksdb_options_optimize_universal_style_compaction",
    dynlib: librocksdb.}
proc rocksdb_options_set_allow_ingest_behind*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_allow_ingest_behind", dynlib: librocksdb.}
proc rocksdb_options_set_compaction_filter*(a2: ptr rocksdb_options_t;
    a3: ptr rocksdb_compactionfilter_t) {.cdecl, importc: "rocksdb_options_set_compaction_filter",
                                       dynlib: librocksdb.}
proc rocksdb_options_set_compaction_filter_factory*(a2: ptr rocksdb_options_t;
    a3: ptr rocksdb_compactionfilterfactory_t) {.cdecl,
    importc: "rocksdb_options_set_compaction_filter_factory", dynlib: librocksdb.}
proc rocksdb_options_compaction_readahead_size*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_compaction_readahead_size", dynlib: librocksdb.}
proc rocksdb_options_set_comparator*(a2: ptr rocksdb_options_t;
                                    a3: ptr rocksdb_comparator_t) {.cdecl,
    importc: "rocksdb_options_set_comparator", dynlib: librocksdb.}
proc rocksdb_options_set_merge_operator*(a2: ptr rocksdb_options_t;
                                        a3: ptr rocksdb_mergeoperator_t) {.cdecl,
    importc: "rocksdb_options_set_merge_operator", dynlib: librocksdb.}
proc rocksdb_options_set_uint64add_merge_operator*(a2: ptr rocksdb_options_t) {.
    cdecl, importc: "rocksdb_options_set_uint64add_merge_operator",
    dynlib: librocksdb.}
proc rocksdb_options_set_compression_per_level*(opt: ptr rocksdb_options_t;
    level_values: ptr cint; num_levels: csize) {.cdecl,
    importc: "rocksdb_options_set_compression_per_level", dynlib: librocksdb.}
proc rocksdb_options_set_create_if_missing*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_create_if_missing", dynlib: librocksdb.}
proc rocksdb_options_set_create_missing_column_families*(
    a2: ptr rocksdb_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_options_set_create_missing_column_families",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_error_if_exists*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_error_if_exists", dynlib: librocksdb.}
proc rocksdb_options_set_paranoid_checks*(a2: ptr rocksdb_options_t; a3: cuchar) {.
    cdecl, importc: "rocksdb_options_set_paranoid_checks", dynlib: librocksdb.}
proc rocksdb_options_set_db_paths*(a2: ptr rocksdb_options_t;
                                  path_values: ptr ptr rocksdb_dbpath_t;
                                  num_paths: csize) {.cdecl,
    importc: "rocksdb_options_set_db_paths", dynlib: librocksdb.}
proc rocksdb_options_set_env*(a2: ptr rocksdb_options_t; a3: ptr rocksdb_env_t) {.
    cdecl, importc: "rocksdb_options_set_env", dynlib: librocksdb.}
proc rocksdb_options_set_info_log*(a2: ptr rocksdb_options_t;
                                  a3: ptr rocksdb_logger_t) {.cdecl,
    importc: "rocksdb_options_set_info_log", dynlib: librocksdb.}
proc rocksdb_options_set_info_log_level*(a2: ptr rocksdb_options_t; a3: cint) {.cdecl,
    importc: "rocksdb_options_set_info_log_level", dynlib: librocksdb.}
proc rocksdb_options_set_write_buffer_size*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_write_buffer_size", dynlib: librocksdb.}
proc rocksdb_options_set_db_write_buffer_size*(a2: ptr rocksdb_options_t; a3: csize) {.
    cdecl, importc: "rocksdb_options_set_db_write_buffer_size", dynlib: librocksdb.}
proc rocksdb_options_set_max_open_files*(a2: ptr rocksdb_options_t; a3: cint) {.cdecl,
    importc: "rocksdb_options_set_max_open_files", dynlib: librocksdb.}
proc rocksdb_options_set_max_file_opening_threads*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_max_file_opening_threads",
              dynlib: librocksdb.}
proc rocksdb_options_set_max_total_wal_size*(opt: ptr rocksdb_options_t; n: uint64) {.
    cdecl, importc: "rocksdb_options_set_max_total_wal_size", dynlib: librocksdb.}
proc rocksdb_options_set_compression_options*(a2: ptr rocksdb_options_t; a3: cint;
    a4: cint; a5: cint; a6: cint) {.cdecl, importc: "rocksdb_options_set_compression_options",
                              dynlib: librocksdb.}
proc rocksdb_options_set_prefix_extractor*(a2: ptr rocksdb_options_t;
    a3: ptr rocksdb_slicetransform_t) {.cdecl, importc: "rocksdb_options_set_prefix_extractor",
                                     dynlib: librocksdb.}
proc rocksdb_options_set_num_levels*(a2: ptr rocksdb_options_t; a3: cint) {.cdecl,
    importc: "rocksdb_options_set_num_levels", dynlib: librocksdb.}
proc rocksdb_options_set_level0_file_num_compaction_trigger*(
    a2: ptr rocksdb_options_t; a3: cint) {.cdecl, importc: "rocksdb_options_set_level0_file_num_compaction_trigger",
                                      dynlib: librocksdb.}
proc rocksdb_options_set_level0_slowdown_writes_trigger*(
    a2: ptr rocksdb_options_t; a3: cint) {.cdecl, importc: "rocksdb_options_set_level0_slowdown_writes_trigger",
                                      dynlib: librocksdb.}
proc rocksdb_options_set_level0_stop_writes_trigger*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_level0_stop_writes_trigger",
              dynlib: librocksdb.}
proc rocksdb_options_set_max_mem_compaction_level*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_max_mem_compaction_level",
              dynlib: librocksdb.}
proc rocksdb_options_set_target_file_size_base*(a2: ptr rocksdb_options_t;
    a3: uint64) {.cdecl, importc: "rocksdb_options_set_target_file_size_base",
                dynlib: librocksdb.}
proc rocksdb_options_set_target_file_size_multiplier*(a2: ptr rocksdb_options_t;
    a3: cint) {.cdecl, importc: "rocksdb_options_set_target_file_size_multiplier",
              dynlib: librocksdb.}
proc rocksdb_options_set_max_bytes_for_level_base*(a2: ptr rocksdb_options_t;
    a3: uint64) {.cdecl, importc: "rocksdb_options_set_max_bytes_for_level_base",
                dynlib: librocksdb.}
proc rocksdb_options_set_level_compaction_dynamic_level_bytes*(
    a2: ptr rocksdb_options_t; a3: cuchar) {.cdecl, importc: "rocksdb_options_set_level_compaction_dynamic_level_bytes",
                                        dynlib: librocksdb.}
proc rocksdb_options_set_max_bytes_for_level_multiplier*(
    a2: ptr rocksdb_options_t; a3: cdouble) {.cdecl,
    importc: "rocksdb_options_set_max_bytes_for_level_multiplier",
    dynlib: librocksdb.}
proc rocksdb_options_set_max_bytes_for_level_multiplier_additional*(
    a2: ptr rocksdb_options_t; level_values: ptr cint; num_levels: csize) {.cdecl,
    importc: "rocksdb_options_set_max_bytes_for_level_multiplier_additional",
    dynlib: librocksdb.}
proc rocksdb_options_enable_statistics*(a2: ptr rocksdb_options_t) {.cdecl,
    importc: "rocksdb_options_enable_statistics", dynlib: librocksdb.}
proc rocksdb_options_set_skip_stats_update_on_db_open*(
    opt: ptr rocksdb_options_t; val: cuchar) {.cdecl,
    importc: "rocksdb_options_set_skip_stats_update_on_db_open",
    dynlib: librocksdb.}
##  returns a pointer to a malloc()-ed, null terminated string
